mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/boolean.sol
contract C layout at true {}
// ----
// TypeError 1763: (21-25): The base slot of the storage layout must evaluate to an integer.
